my_test.js not currently functioning the way I want it to

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <body>
     <script src="sketch.js"></script>
+    <script src="my_test.js"></script>
     <script src="arrows.js"></script>
   </body>
 </html>
