commiting on open, no breaking changes

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
 
   <body>
+    <script type="module" src="my_test.js"></script>
     <script src="sketch.js"></script>
-    <script src="my_test.js"></script>
     <script src="arrows.js"></script>
   </body>
 </html>
