--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
-    <script src="libraries/p5.min.js"></script>
+    <script src="node_modules/p5/lib/p5.js"></script>
   </head>
 
   <body>
